Fix admin nav-tabs text-overflow and make vertical tabs responsives

--- a/skins/admin/default-wp38/src/less/components/tabs.less
+++ b/skins/admin/default-wp38/src/less/components/tabs.less
@@ -16,6 +16,7 @@
       background: #e4e4e4;
       color: #555;
       overflow: hidden;
+      white-space: normal;
 
       a {
         outline: 0;
@@ -111,6 +112,22 @@
 
     .form-table td h2 {
       margin-top: 0;
+    }
+  }
+
+  @media (max-width: 782px) {
+    .tab-wrapper {
+      width: 100%;
+
+      .nav-tab {
+        width: 100%;
+        border-right: 1px solid #ccc;
+        border-left: 1px solid #ccc;
+      }
+    }
+    .ui-tabs-panel {
+      margin-left: 0;
+      clear: both;
     }
   }
 }
